Feat: JWT를 활용하여 Spring Security 적용

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,24 @@
 spring.application.name=backend
 
+cors.allowedOrigins=http://localhost:5175
+
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+# expire time
+access-token.milli-second=604800000
+refresh-token.milli-second=604800000
+temp-token.milli-second=300000
+spring.jwt.secret=sk-m&service-moongi-ks-m&service-sk-m&service-moongi-ks-m&service-sk-m&service-moongi-ks-m&service
+jwt.salt=sk-m&service-moongi-ks-m&service-sk-m&service-moongi-ks-m&service-sk-m&service-moongi-ks-m&service
+
 
 logging.level.org.hibernate.SQL=debug
 # logging.level.org.hibernate.type=trace # 스프링 부트 2.x, Hibernate 5
