Feat: 백엔드 구현 완료

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=backend
 
-cors.allowedOrigins=http://localhost:5175
+# file upload
+file.upload-dir = ./file/upload
+
+cors.allowedOrigins=http://localhost:5173
 
 spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.username=sa
@@ -19,7 +22,4 @@ temp-token.milli-second=300000
 spring.jwt.secret=sk-m&service-moongi-ks-m&service-sk-m&service-moongi-ks-m&service-sk-m&service-moongi-ks-m&service
 jwt.salt=sk-m&service-moongi-ks-m&service-sk-m&service-moongi-ks-m&service-sk-m&service-moongi-ks-m&service
 
-
 logging.level.org.hibernate.SQL=debug
-# logging.level.org.hibernate.type=trace # 스프링 부트 2.x, Hibernate 5
-# logging.level.org.hibernate.orm.jdbc.bind=trace # 스프링 부트 3.x, Hibernate 6
