--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,6 @@
 # API URL settings for PJT
 VITE_VUE_API_URL=http://localhost:8080
+
+# count per page
+VITE_ARTICLE_LIST_SIZE=20
+VITE_ARTICLE_NAVIGATION_SIZE=10
